--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
