--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
