--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "resend": "^4.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
