--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.52.1",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
