--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@livekit/components-react": "^2.4.3",
+    "@livekit/components-styles": "^1.0.12",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -35,6 +37,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
+    "livekit-client": "^2.5.0",
+    "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
